# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: gendiff.py  parser.py
gendiff/scripts/: gendiff_script.py
tests/: test_gendiff.py
tests/files/: file3.json  file3.yml
tests/fixtures/: fixtures.py
