[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["krivitskyanton <krivitsky.anton@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" }
]

[tool.poetry.scripts]
gendiff = "gendiff.gendiff:main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
